--- a/views/installations.pug
+++ b/views/installations.pug
@@ -18,12 +18,12 @@ html(lang='en')
             p(class='centered')= title
         if link
           if webm
-            a(href=link): video(class='centered' src=image autoplay loop)
+            a(href=link): video(class='centered' src=image controls loop)
           else
             a(href=link): img(class='centered' src=image)
         else
           if webm
-            video(class='centered' src=image autoplay loop)
+            video(class='centered' src=image controls loop)
           else
             img(class='centered' src=image)
         
