--- a/views/motion.pug
+++ b/views/motion.pug
@@ -14,7 +14,7 @@ html(lang='en')
         if title
           a(class='centered' href=link): p= title
         if webm
-          a(href=link): video(class='centered' src=image autoplay loop)
+          a(href=link): video(class='centered' src=image controls loop)
         else
           a(href=link): img(class='centered' src=image)
         
