--- a/views/motion.pug
+++ b/views/motion.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     title a portal to another world
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
     link(href="css/styles.css" rel="stylesheet" type='text/css')
@@ -9,7 +10,7 @@ html(lang='en')
     
   body
     
-    mixin work-link(title, link, image, webm)
+    mixin work-link(title, link, image, webm, text)
       .info-container
         if title
           a(class='centered' href=link): p= title
@@ -17,7 +18,10 @@ html(lang='en')
           a(href=link): video(class='centered' src=image controls loop)
         else
           a(href=link): img(class='centered' src=image)
-        
+        if text
+          p(class='info-header') <strong>info</strong>
+          p(class='info-text')= text
+    
     .main-container
       .nav-container
         ul(class='nav-main')
@@ -36,16 +40,16 @@ html(lang='en')
       .info-container
         p(class='centered').
           examples of motion graphics work made in After Effects and Cinema 4D
-      +work-link('motion graphics — bouncing transformation', 'https://vimeo.com/199481317', 'https://zippy.gfycat.com/MiserableBetterBarb.webm', true)
-      +work-link('motion graphics — greeble-text', 'https://vimeo.com/199890909', 'https://zippy.gfycat.com/WarmBlandAntelope.webm', true)
-      +work-link('experimental — dreamtree-00', 'https://vimeo.com/199482449', 'https://fat.gfycat.com/EnviousShyBlackrussianterrier.webm', true)
-      +work-link('experimental — dn_vacay_00', 'https://vimeo.com/199481646', 'https://giant.gfycat.com/WillingObviousEland.webm', true)
-      +work-link('motion graphics — dyanmic-weight', 'https://vimeo.com/199942300', 'https://zippy.gfycat.com/AggressiveInconsequentialBlackrussianterrier.webm', true)
-      +work-link('motion graphics — 2D 3d-object', 'https://vimeo.com/199936663', 'https://zippy.gfycat.com/GracefulFabulousDoe.webm', true)
-      +work-link('motion graphics — bad/blurry footage track + composite', 'https://vimeo.com/199933080', 'https://zippy.gfycat.com/InferiorKindlyHind.webm', true)
-      +work-link('motion graphics — tracking + comping 3d objects', 'https://vimeo.com/199933533', 'https://fat.gfycat.com/SparklingScratchyIndianpangolin.webm', true)
-      +work-link('animation — animate turangalila - glitchd', 'https://vimeo.com/159004734', 'https://giant.gfycat.com/ScaryLividGalapagosdove.webm', true)
-      +work-link('animation — animate turangalila — silk motion', 'https://vimeo.com/159004736', 'https://giant.gfycat.com/GaseousDearestAiredaleterrier.webm', true)
-      +work-link('animation — animate aurangalila — tchaikovsky-genrative', 'https://vimeo.com/159010486', 'https://fat.gfycat.com/BothSpiritedAmberpenshell.webm', true)
+      +work-link('motion graphics — bouncing transformation', 'https://vimeo.com/199481317', 'https://zippy.gfycat.com/MiserableBetterBarb.webm', true, 'Ball bounces, transforms to square -- made in After Effects')
+      +work-link('motion graphics — greeble-text', 'https://vimeo.com/199890909', 'https://zippy.gfycat.com/WarmBlandAntelope.webm', true, "an example of greeble'd text and its practical use: A greeble or nurnie is a fine detailing added to the surface of a larger object that makes it appear more complex, and therefore more visually interesting. -- made in After Effects")
+      +work-link('experimental — dreamtree-00', 'https://vimeo.com/199482449', 'https://fat.gfycat.com/EnviousShyBlackrussianterrier.webm', true, "Collaboration between Joseph Wells and Makai Mendiola - Seamless loop depicting a rendered sakura tree, spinning on an abstract landscape. -- made in After Effects and Cinema 4D")
+      +work-link('experimental — dn_vacay_00', 'https://vimeo.com/199481646', 'https://giant.gfycat.com/WillingObviousEland.webm', true, "Collaboration between Joseph Wells and Makai Mendiola - Seamless loop depicting a deformed bust, spinning on an abstract landscape. -- made in After Effects and Cinema 4D")
+      +work-link('motion graphics — dyanmic-weight', 'https://vimeo.com/199942300', 'https://zippy.gfycat.com/AggressiveInconsequentialBlackrussianterrier.webm', true, "two examples of dynamic-weight and movement -- made in After Effects")
+      +work-link('motion graphics — 2D 3d-object', 'https://vimeo.com/199936663', 'https://zippy.gfycat.com/GracefulFabulousDoe.webm', true, "flat shaded 3D object, with a tracked and composited screen -- made using After Effects and Cinema 4D")
+      +work-link('motion graphics — bad/blurry footage track + composite', 'https://vimeo.com/199933080', 'https://zippy.gfycat.com/InferiorKindlyHind.webm', true, "tracking + compositing bad//blurry green screen footage -- made in Adobe After Effects + mocha AE")
+      +work-link('motion graphics — tracking + comping 3d objects', 'https://vimeo.com/199933533', 'https://fat.gfycat.com/SparklingScratchyIndianpangolin.webm', true, "tracking + compositing a 3d object onto a stock footage -- made in After Effects and Cinema 4D")
+      +work-link('animation — animate turangalila - glitchd', 'https://vimeo.com/159004734', 'https://giant.gfycat.com/ScaryLividGalapagosdove.webm', true, "Submission for Animate Turangalila proposal for Oregon Symphony Sights+Sounds headed by Rose Bond -- made in After Effects using Red Giant Trapcode")
+      +work-link('animation — animate turangalila — silk motion', 'https://vimeo.com/159004736', 'https://giant.gfycat.com/GaseousDearestAiredaleterrier.webm', true, "Submission for Animate Turangalila proposal for Oregon Symphony Sights+Sounds headed by Rose Bond -- made in After Effects using Red Giant Trapcode")
+      +work-link('animation — animate aurangalila — tchaikovsky-genrative', 'https://vimeo.com/159010486', 'https://fat.gfycat.com/BothSpiritedAmberpenshell.webm', true, "Submission for Animate Turangalila proposal for Oregon Symphony Sights+Sounds headed by Rose Bond -- made in After Effects using Red Giant Trapcode")
 
   script(src='javascripts/script.js')
