--- a/views/about.pug
+++ b/views/about.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     title a portal to another world
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     //link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
@@ -15,15 +16,15 @@ html(lang='en')
       .nav-container
         ul(class='nav-main')
           li: a(href='/') home
-          li(class='dropdown dropdown-open')
+          li(class='dropdown')
             a(class='work' href='/work') work
             ul(class='dropdown-open')
               li: a(href='/visuals') visuals
               li: a(href='/renders') 3D renders
               li: a(href='/motion') motion graphics
               li: a(href='/installations') installations
-              li: a(href='https://spacepunk.media') spacepunk.media
               li: a(href='/coding') creative coding
+              li: a(href='https://spacepunk.media') spacepunk.media
           li: a(class='active' href='/about') about
       
       .info-container
