--- a/views/motion.pug
+++ b/views/motion.pug
@@ -15,9 +15,9 @@ html(lang='en')
         if title
           a(class='centered' href=link): p= title
         if webm
-          a(href=link): video(class='centered' src=image controls loop)
+          video(class='centered' src=image controls loop)
         else
-          a(href=link): img(class='centered' src=image)
+          img(class='centered' src=image)
         if text
           p(class='info-header') <strong>info</strong>
           p(class='info-text')= text
