--- a/views/coding.pug
+++ b/views/coding.pug
@@ -10,13 +10,26 @@ html(lang='en')
     
   body
     
-    mixin work-link(title, image, path, webm)
+    mixin work-link(title, image, webm, link, text)
       .info-container
-        a(class='centered' href= path): p= title
-        if webm
-          a(class='centered' href= path): video(src=image controls loop)
+        if link
+          a(class='centered' href= link): p= title
+          if webm
+            a(class='centered'): video(src=image controls loop)
+          else
+            a(class='centered' href= link): img(src=image)
         else
-          a(class='centered' href= path): img(src=image)
+          p(class='centered title')= title
+          if webm
+            a(class='centered'): video(src=image controls loop)
+          else
+            a(class='centered' href= link): img(src=image)
+        if text
+          p(class='info-header') <strong>info</strong>
+          p(class='info-text')= text
+          
+        
+        
         
     .main-container
       .nav-container
@@ -25,10 +38,18 @@ html(lang='en')
           li(class='dropdown')
             a(class='active work' href='/work') work
             ul(class='dropdown-open')
-              li: a(href='/visuals') visuals
-              li: a(href='/renders') 3D renders
-              li: a(href='/motion') motion graphics
+              li: a(class='active' href='/coding') creative coding
               li: a(href='/installations') installations
-              li: a(href='/coding') creative coding
+              li: a(href='/motion') motion graphics
+              li: a(href='/renders') 3D renders
+              li: a(href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
+          
+      +work-link('gridGen -- grid', 'https://zippy.gfycat.com/ComplicatedAggravatingAustraliansilkyterrier.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/gridGen_AudioInput_v2.pde', false)
+      +work-link('paint.IR', '/images/paintir.png', false, 'http://spacepunk.media/paintir')
+      +work-link('gridGen -- lines', 'https://zippy.gfycat.com/DecentSelfreliantFinwhale.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioReactive_gridGen_v3.pde', false)
+      +work-link('constructed criticism', '/images/creative-coding/constructed.jpg', false, 'http://www.constructedcriticism.club', false)      
+      +work-link('gridGen -- elipse', 'https://fat.gfycat.com/SickSerpentineHoneyeater.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioInput_ellipse_v2.pde', false)
+    
+      
