--- a/views/index.pug
+++ b/views/index.pug
@@ -27,15 +27,15 @@ html(lang='en')
           li(class='dropdown')
             a(class='work' href='/work' ) work
             ul(class='dropdown-open')
-              li: a(href='/visuals') visuals
-              li: a(href='/renders') 3D renders
-              li: a(href='/motion') motion graphics
-              li: a(href='/installations') installations
               li: a(href='/coding') creative coding
+              li: a(href='/installations') installations
+              li: a(href='/motion') motion graphics
+              li: a(href='/renders') 3D renders
+              li: a(href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
       .info-container
-        p.
-          Joseph Wells is a contemporary New Media artist based in Portland, Oregon. With a background in Computer Science and Computer Engineering at PSU, Joseph transferred to PNCA in the Spring of 2015 where he has been studying an Intermedia practice focusing in New Media. Using his knowledge of programming and hardware design, Joseph has been merging procedural programming techniques and software integration into his visual design works. He performs live visuals in Portland’s music scene, and works closely with musicians and performers within a variety of disciplines. His upcoming pursuits involve virtual reality, generative video and sound performance, 3D printing, and abstract hardware hacking.
+        p(class='centered').
+          out of the frying and pan and into the furnace
           
   script(src='/javascripts/script.js')
