--- a/views/installations.pug
+++ b/views/installations.pug
@@ -10,7 +10,7 @@ html(lang='en')
     
   body
     
-    mixin work-link(title, image, webm, link)
+    mixin work-link(title, image, webm, link, text)
       .info-container
         if title
           if link
@@ -35,15 +35,15 @@ html(lang='en')
           li(class='dropdown')
             a(class='active work' href='/work') work
             ul(class='dropdown-open')
-              li: a(href='/visuals') visuals
-              li: a(href='/renders') 3D renders
-              li: a(href='/motion') motion graphics
-              li: a(class='active' href='/installations') installations
               li: a(href='/coding') creative coding
+              li: a(class='active' href='/installations') installations
+              li: a(href='/motion') motion graphics
+              li: a(href='/renders') 3D renders
+              li: a(href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
     
-      +work-link('paint.IR', '/images/paintir.png', false, 'https://vimeo.com/207905122')
+      +work-link('paint.IR', '/images/paintir.png', false, 'http://spacepunk.media/paintir')
       +work-link('brite-lite', 'https://zippy.gfycat.com/HeavenlyThoughtfulBorer.webm', true)
       +work-link('ghost in the machine', '/images/installations/interactive/ghosts.jpg', false)
       +work-link('salt in the water', 'https://zippy.gfycat.com/ShabbyLeadingBlackwidowspider.webm', true)
