--- a/views/visuals.pug
+++ b/views/visuals.pug
@@ -32,16 +32,16 @@ html(lang='en')
           li(class='dropdown')
             a(class='active work' href='/work') work
             ul(class='dropdown-open')
-              li: a(class='active' href='/visuals') visuals
-              li: a(href='/renders') 3D renders
-              li: a(href='/motion') motion graphics
-              li: a(href='/installations') installations
               li: a(href='/coding') creative coding
+              li: a(href='/installations') installations
+              li: a(href='/motion') motion graphics
+              li: a(href='/renders') 3D renders
+              li: a(class='active' href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
       
       .info-container
-        p(class='centered') a visual series from a video performance at the Atlantis Lounge, Portland
+        p(class='centered') a collection of images from live visual performances
       +work-link(false, '/images/atlantis-deep/img-00-min.png', false, '/images/atlantis-deep/img-00.png')
       +work-link(false, '/images/atlantis-deep/img-01-min.png', false, '/images/atlantis-deep/img-01.png')
       +work-link(false, '/images/atlantis-deep/img-02-min.png', false, '/images/atlantis-deep/img-02.png')
