--- a/views/work.pug
+++ b/views/work.pug
@@ -28,19 +28,19 @@ html(lang='en')
           li(class='dropdown')
             a(class='active work' ) work
             ul(class='dropdown-open')
-              li: a(href='/visuals') visuals
-              li: a(href='/renders') 3D renders
-              li: a(href='/motion') motion graphics
-              li: a(href='/installations') installations
               li: a(href='/coding') creative coding
+              li: a(href='/installations') installations
+              li: a(href='/motion') motion graphics
+              li: a(href='/renders') 3D renders
+              li: a(href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
-          
-      +work-link('visuals', '/images/atlantis-deep/img-00.png', '/visuals', false, 'a visual series from a video performance at the Atlantis Lounge, Portland')
-      +work-link('3D renders', '/images/cinema4d/still/bead-bust-00.jpg', '/renders', false, 'a collection of renders made in Cinema 4D and edited in Photoshop and After Effects respectively')
-      +work-link('motion graphics', 'https://zippy.gfycat.com/MiserableBetterBarb.webm', '/motion', true, 'examples of motion graphics work made in After Effects and Cinema 4D')
+      
+      +work-link('creative coding', 'https://zippy.gfycat.com/ComplicatedAggravatingAustraliansilkyterrier.webm', '/coding', true)
       +work-link('installations', '/images/paintir.png', '/installations', false)
-      +work-link('creative coding', '/images/paintir.png', '/coding', false)
+      +work-link('motion graphics', 'https://zippy.gfycat.com/MiserableBetterBarb.webm', '/motion', true, 'examples of motion graphics work made in After Effects and Cinema 4D')    
+      +work-link('3D renders', '/images/cinema4d/still/bead-bust-00.jpg', '/renders', false, 'a collection of renders made in Cinema 4D and edited in Photoshop and After Effects respectively')
+      +work-link('visuals', '/images/atlantis-deep/img-00.png', '/visuals', false, 'a collection of images from live visual performances')
       +work-link('spacepunk.media', '/images/spacepunk.png', 'https://spacepunk.media', false)
       
   script(src='javascripts/script.js')
