--- a/views/coding.pug
+++ b/views/coding.pug
@@ -15,13 +15,17 @@ html(lang='en')
         if link
           a(class='centered' href= link): p= title
           if webm
-            a(class='centered'): video(src=image controls loop)
+            video(controls autoplay loop)
+              source(src= image + ".webm" type="video/webm")
+              source(src= image + ".mp4" type="video/mp4")
           else
             a(class='centered' href= link): img(src=image)
         else
           p(class='centered title')= title
           if webm
-            a(class='centered'): video(src=image controls loop)
+            video(controls autoplay loop)
+              source(src= image + ".webm" type="video/webm")
+              source(src= image + ".mp4" type="video/mp4")
           else
             a(class='centered' href= link): img(src=image)
         if text
@@ -31,22 +35,22 @@ html(lang='en')
           p(class='info-header') <strong>code snippet</strong>
           if code == '0'
               pre(class='info-text')
-                include ./code/gridGen-grid.pde
+                include /code/gridGen-grid.pde
           if code == '1'
               pre(class='info-text')
-                include ./code/ofx-winter-lights.cpp
+                include /code/ofx-winter-lights.cpp
           if code == '2'
               pre(class='info-text')
-                include ./code/gridGen-lines.pde  
+                include /code/gridGen-lines.pde  
           if code == '3'
               pre(class='info-text')
-                include ./code/gridGen-ellipse.pde  
+                include /code/gridGen-ellipse.pde  
           if code == '4'
               pre(class='info-text')
-                include ./code/gridGen-ellipse.pde  
+                include /code/gridGen-ellipse.pde  
           if code == '5'
               pre(class='info-text')
-                include ./code/gridGen-grid.pde           
+                include /code/gridGen-grid.pde           
   
     .main-container
       .nav-container
@@ -63,11 +67,11 @@ html(lang='en')
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
           
-      +work-link('gridGen -- grid', 'https://zippy.gfycat.com/ComplicatedAggravatingAustraliansilkyterrier.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/gridGen_AudioInput_v2.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '0')
+      +work-link('gridGen -- grid', 'https://zippy.gfycat.com/ComplicatedAggravatingAustraliansilkyterrier', true, 'https://github.com/monstertux/processing-gridgen/blob/master/gridGen_AudioInput_v2.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '0')
       +work-link('paint.IR', '/images/paintir.png', false, 'http://spacepunk.media/paintir', "By hacking a common tool and medium, paint.IR allows the user to explore the art of spray painting with a new-media twist. Featured at Portland's Winter Light Festival, visitors were invited to spray paint light onto OMSI walls, exploring their creativity, collaborating with others, and contributing their work to the wonderful collection presented in the festival.made with OpenFrameworks -- made with OpenFrameworks", '1')
-      +work-link('gridGen -- lines', 'https://zippy.gfycat.com/DecentSelfreliantFinwhale.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioReactive_gridGen_v3.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '2')
+      +work-link('gridGen -- lines', 'https://zippy.gfycat.com/DecentSelfreliantFinwhale', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioReactive_gridGen_v3.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '2')
       +work-link('turntable sequencer', '/images/creative-coding/turntable.png', false, 'http://spacepunk.media/interactive-turntable', 'The Interactive Turntable Sequencer is a concept piece that engages audiences of all ages, forcing them to question recorded audio, engage with taboo objects, and explore music composition through play. The piece is designed to be welcoming to non-musicians and musicians alike, and evens the playing field trough experimental applications. -- made with Processing', false)
-      +work-link('gridGen -- ellipse', 'https://fat.gfycat.com/SickSerpentineHoneyeater.webm', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioInput_ellipse_v2.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '4')
+      +work-link('gridGen -- ellipse', 'https://fat.gfycat.com/SickSerpentineHoneyeater', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioInput_ellipse_v2.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '4')
       +work-link('constructed criticism', '/images/creative-coding/constructed.jpg', false, 'http://www.constructedcriticism.club', 'Constructed Criticism is an artificial intelligence programmed to deliver "thoughtful" critique and feedback for your artistic endeavors.criticism’s from the internet’s most vocal critics, Constructed Criticism produces thoughtfully constructed criticism based on what it has heard on the internet.classic echo chamber fashion, this AI creates “new” critiques using patterns and habits present in critiques it has read. -- made with Node.js', false)      
       
     script(src='javascripts/script.js')
