--- a/views/visuals.pug
+++ b/views/visuals.pug
@@ -16,12 +16,16 @@ html(lang='en')
           p(class='centered title')= title
         if link
           if webm
-            video(class='centered' src=image controls loop)
+            video(controls autoplay loop)
+              source(src= image + ".webm" type="video/webm")
+              source(src= image + ".mp4" type="video/mp4")
           else
             a(href=link): img(class='centered' src=image)
         else
           if webm
-            video(class='centered' src=image autoplay loop)
+            video(controls autoplay loop)
+              source(src= image + ".webm" type="video/webm")
+              source(src= image + ".mp4" type="video/mp4")
           else
             img(class='centered' src=image)
         
