fixing an issue of internal server error

--- a/views/coding.pug
+++ b/views/coding.pug
@@ -35,22 +35,22 @@ html(lang='en')
           p(class='info-header') <strong>code snippet</strong>
           if code == '0'
               pre(class='info-text')
-                include /code/gridGen-grid.pde
+                include ./code/gridGen-grid.pde
           if code == '1'
               pre(class='info-text')
-                include /code/ofx-winter-lights.cpp
+                include ./code/ofx-winter-lights.cpp
           if code == '2'
               pre(class='info-text')
-                include /code/gridGen-lines.pde  
+                include ./code/gridGen-lines.pde  
           if code == '3'
               pre(class='info-text')
-                include /code/gridGen-ellipse.pde  
+                include ./code/gridGen-ellipse.pde  
           if code == '4'
               pre(class='info-text')
-                include /code/gridGen-ellipse.pde  
+                include ./code/gridGen-ellipse.pde  
           if code == '5'
               pre(class='info-text')
-                include /code/gridGen-grid.pde           
+                include ./code/gridGen-grid.pde           
   
     .main-container
       .nav-container
