--- a/views/coding.pug
+++ b/views/coding.pug
@@ -15,7 +15,7 @@ html(lang='en')
         if link
           a(class='centered' href= link): p= title
           if webm
-            video(controls autoplay loop)
+            video(controls loop)
               source(src= image + ".webm" type="video/webm")
               source(src= image + ".mp4" type="video/mp4")
           else
@@ -23,7 +23,7 @@ html(lang='en')
         else
           p(class='centered title')= title
           if webm
-            video(controls autoplay loop)
+            video(controls loop)
               source(src= image + ".webm" type="video/webm")
               source(src= image + ".mp4" type="video/mp4")
           else
