--- a/views/installations.pug
+++ b/views/installations.pug
@@ -19,14 +19,14 @@ html(lang='en')
             p(class='title centered')= title
         if link
           if webm
-            video(controls autoplay loop)
+            video(controls loop)
               source(src= image + ".webm" type="video/webm")
               source(src= image + ".mp4" type="video/mp4")
           else
             a(href=link): img(class='centered' src=image)
         else
           if webm
-            video(controls autoplay loop)
+            video(controls loop)
               source(src= image + ".webm" type="video/webm")
               source(src= image + ".mp4" type="video/mp4")
           else
