--- a/views/motion.pug
+++ b/views/motion.pug
@@ -15,7 +15,7 @@ html(lang='en')
         if title
           a(class='centered' href=link): p= title
         if webm
-          video(controls autoplay loop)
+          video(controls loop)
             source(src= image + ".webm" type="video/webm")
             source(src= image + ".mp4" type="video/mp4")
         else
