--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,15 @@ body {
 body {
 }
 
+#sketch-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  top: 0px;
+  left: 0px;
+}
+
 .main-container{
   padding-top: 20px;
   padding-bottom: 20px;
