--- a/views/visuals.pug
+++ b/views/visuals.pug
@@ -1,12 +1,6 @@
 doctype html
 html(lang='en')
-  head
-    meta(charset='UTF-8')
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    title a portal to another world
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
-    link(href="css/styles.css" rel="stylesheet" type='text/css')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+  include ./head.pug
     
   body
     
@@ -28,7 +22,8 @@ html(lang='en')
               source(src= image + ".mp4" type="video/mp4")
           else
             img(class='centered' src=image)
-        
+    
+    div(id='sketch-container')     
     .main-container
       .nav-container
         ul(class='nav-main')
