--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,12 +19,7 @@ body {
 }
 
 #sketch-container{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
-  top: 0px;
-  left: 0px;
+  display: none;
 }
 
 .main-container{
@@ -35,6 +30,16 @@ body {
 }
 
 @media screen and (min-width: 700px){
+  #sketch-container{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    top: 0px;
+    left: 0px;
+  }
+
   .main-container {
     padding-top: 20px;
     width: 45%;
