--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ a{z-index: 50;}
 @media screen and (min-width: 700px){
   #sketch-container{
     display: block;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
 
