Removed the sketch.js because it was causing bugs

--- a/views/index.pug
+++ b/views/index.pug
@@ -32,3 +32,4 @@ html(lang='en')
           out of the frying and pan and into the furnace
           
   script(src='/javascripts/script.js')
+  //script(src='/javascripts/sketch.js')
