--- a/views/installations.pug
+++ b/views/installations.pug
@@ -48,6 +48,6 @@ html(lang='en')
       +work-link('salt in the water', 'https://zippy.gfycat.com/ShabbyLeadingBlackwidowspider', true)
       +work-link('D.U.G. x DISJECTA', 'https://fat.gfycat.com/FrayedAjarHyrax', true)
       +work-link('walld art', 'https://zippy.gfycat.com/MeekGreenGhostshrimp', true)
-      +work-link('digital avatar', 'https://thumbs.gfycat.com/AffectionateSnivelingGallowaycow-mobile', true, 'https://vimeo.com/163204617')    
+      +work-link('digital avatar', 'https://giant.gfycat.com/AffectionateSnivelingGallowaycow', true, 'https://vimeo.com/163204617')    
       
   script(src='javascripts/script.js')
