--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,6 +117,7 @@ a{z-index: 50;}
   flex-direction: column;
 
   padding-left: 20px;
+  padding-right: 20px;
   width: 100%;
   height: 100%;
 
@@ -144,7 +145,7 @@ a{z-index: 50;}
 }
 
 .nav-container a {
-  padding-right: 10px;
+  margin-right: 20px;
   line-height: 25px;
 }
 
