Added some header text to coding.pug

--- a/views/coding.pug
+++ b/views/coding.pug
@@ -61,7 +61,10 @@ html(lang='en')
               li: a(href='/visuals') visuals
               li: a(href='https://spacepunk.media') spacepunk.media
           li: a(href='/about') about
-          
+      
+      .info-container
+        p(class='centered') a collection of creative code samples
+        a(class='centered' href='https://github.com/monstertux') github   
       +work-link('gridGen -- grid', 'https://zippy.gfycat.com/ComplicatedAggravatingAustraliansilkyterrier', true, 'https://github.com/monstertux/processing-gridgen/blob/master/gridGen_AudioInput_v2.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '0')
       +work-link('paint.IR', '/images/paintir.png', false, 'http://spacepunk.media/paintir', "By hacking a common tool and medium, paint.IR allows the user to explore the art of spray painting with a new-media twist. Featured at Portland's Winter Light Festival, visitors were invited to spray paint light onto OMSI walls, exploring their creativity, collaborating with others, and contributing their work to the wonderful collection presented in the festival.made with OpenFrameworks -- made with OpenFrameworks", '1')
       +work-link('gridGen -- lines', 'https://zippy.gfycat.com/DecentSelfreliantFinwhale', true, 'https://github.com/monstertux/processing-gridgen/blob/master/audioReactive_gridGen_v3.pde', 'a series of audio generated grid patterns to relax the mind and release the voice -- made with Processing', '2')
